<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_filters"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF" >
    
    <TextView 
        android:text="@string/newEvent_Label_Category" 
        style="@style/formLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
 
    <Spinner
		android:id="@+id/search_Spinner_Category"
		android:layout_width="fill_parent"
		android:layout_height="48dp"
		android:layout_marginBottom="3dp"
		android:prompt="@string/newEvent_Spinner_Prompt_Category"  >
	</Spinner>
    	    	
    <TextView 
   		android:text="@string/newEvent_Label_Province" 
     	style="@style/formLabel"
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content" />  
     
	<Spinner
   		android:id="@+id/search_Spinner_Province"
   		android:layout_width="fill_parent"
   		android:layout_height="48dp"
   		android:prompt="@string/newEvent_Spinner_Prompt_Province" />

</LinearLayout>
