<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <!-- Action Bar -->

	<ViewStub 
	    android:id="@+id/actionBar"
       	android:inflatedId="@+id/header"
        android:layout="@layout/header"
        android:layout_width="fill_parent"
        android:layout_height="60dip" />
	
	<!-- inicia el ScrollView -->
    <ScrollView android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
		<LinearLayout 
			android:orientation="vertical"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent">    
		   	
			<RelativeLayout
				android:layout_width="fill_parent"
				android:layout_height="40dp"
				android:background="#0B0B61"> 
				
				<TextView				        
					android:id="@+id/settingsView_LabelNotifications"				        
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_marginLeft="5dp"
					android:text="@string/settingsView_LabelNotifications"
					android:textColor="#FFFFFF"
					android:textStyle="bold">
				</TextView>									
			</RelativeLayout>	
				  
			<CheckBox
				android:id="@+id/settingsView_CheckBoxReceiveMsg" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"			        
				android:text="@string/settingsView_CheckBoxReceiveMsg">
			</CheckBox>	
		  			   		   
		<!-- tabulado de los checkbuttons de notificaciones -->
			<LinearLayout 
				android:orientation="vertical"
				android:layout_width="fill_parent" 
				android:layout_height="fill_parent"
				android:layout_marginLeft="40dp">
				   
				<CheckBox
				    android:id="@+id/settingsView_CheckBoxRMsgBySound"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"				        		        	        
				    android:text="@string/settingsView_CheckBoxRMsgBySound">
				</CheckBox>   
				
				<CheckBox
				    android:id="@+id/settingsView_CheckBoxRMsgByVibration"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/settingsView_CheckBoxRMsgByVibration">
				</CheckBox>    
				
				<CheckBox
				    android:id="@+id/settingsView_checkBoxRMsgByLight"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"				            
				    android:text="@string/settingsView_checkBoxRMsgByLight">
				</CheckBox>    
			</LinearLayout>
		   
		  <!-- Checkbutton: Recibir notificaciones por e-mail -->
			<CheckBox
				android:id="@+id/settingsView_CheckBoxRMsgByEmail"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"			        
				android:text="@string/settingsView_CheckBoxRMsgByEmail">
			</CheckBox>	
		  
			<RelativeLayout
				android:layout_width="fill_parent"
				android:layout_height="40dp"
				android:background="#0B0B61" >
     
				<TextView
					android:id="@+id/settingsView_LabelPersonalData"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_marginLeft="5dp"
					android:text="@string/settingsView_LabelPersonalData"
					android:textColor="#FFFFFF"
					android:textStyle="bold">
				</TextView>
					
			</RelativeLayout>			  
		
			<!-- Datos personales-->
			<TextView
				android:id="@+id/settingsView_LabelUpdatePersonalData"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textStyle="bold" 
				android:text="@string/settingsView_LabelUpdatePersonalData">
			</TextView>	
	
			<LinearLayout
				android:id="@+id/relativeLayout1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
		
				<TextView
					android:id="@+id/settingsView_LabelPhone"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/settingsView_LabelPhone">
				</TextView>		
		           	 
				<EditText
					android:id="@+id/settingsView_EditPhone" 		          
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"	
					android:layout_marginLeft="20dp"		           
					android:inputType="phone"   
				    android:hint="">
				</EditText>    		 
			</LinearLayout>
		   
			<LinearLayout				
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
						
				<TextView
					android:id="@+id/settingsView_TextMobil"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"		                       		                    
					android:text="@string/settingsView_LabelMobil">
				</TextView>			
					 
				<EditText
					android:id="@+id/settingsView_EditMobil"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"		           
					android:layout_marginLeft="40dp"
					android:hint="">
				</EditText>			 
		           
			</LinearLayout>
		   
			<LinearLayout		       
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >
				
				<TextView
				    android:id="@+id/settingsView_LabelAddress"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/settingsView_LabelAddress">
				</TextView>    		 
				    
				<EditText
				    android:id="@+id/settingsView_EditAddress"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"		            
				    android:layout_marginLeft="15dp"
				    android:hint="">
				</EditText>    
		       		 
			</LinearLayout>
		   
			<RelativeLayout
				android:layout_width="fill_parent"
				android:layout_height="40dp"
				android:background="#0B0B61" > 
			     
				<TextView
					android:id="@+id/settingsView_LabelCountBiljet"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_marginLeft="5dp"
					android:text="@string/settingsView_LabelCountBiljet"
					android:textColor="#FFFFFF"
					android:textStyle="bold">
				</TextView>
					
			</RelativeLayout>
		   		
			<TextView
				android:id="@+id/settingsView_LabelUpdateCountBiljet"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textStyle="bold" 
				android:text="@string/settingsView_LabelUpdateCountBiljet">
			</TextView>	
				
			<CheckBox
				android:id="@+id/settingsView_CheckBoxChangePassword"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"			        
				android:text="@string/settingsView_CheckBoxChangePassword">
			</CheckBox>	
		  		
		  	<!-- Separator 1-->    
			    	
			<RelativeLayout
			    android:layout_width="fill_parent"
		        android:layout_height="2dp"
		        android:background="#000000"/>    
				 	
			<LinearLayout				    
			    android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:orientation="horizontal"					
				android:layout_gravity="center_vertical">    
				
					<TextView
					    android:id="@+id/settingsView_LabelCurrentPassword"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_marginLeft="50dp"
					    android:text="@string/settingsView_LabelCurrentPassword">
					</TextView>
				 
					<EditText
					    android:id="@+id/settingsView_EditCurrentPassword"
					    android:layout_width="match_parent"						    
					    android:layout_height="wrap_content"
					    android:inputType="textPassword"
					    android:enabled="false"
					    android:layout_marginRight="50dp">    				    
					</EditText>					
					
			</LinearLayout>		
			
			<LinearLayout				    
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:orientation="horizontal"					
				android:layout_gravity="center_vertical">    
						
					<TextView
					    android:id="@+id/settingsView_LabelNewPassword"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_marginLeft="50dp"						    
					    android:text="@string/settingsView_LabelNewPassword">					    
					</TextView>   
				 
					<EditText
					    android:id="@+id/settingsView_EditNewPassword"
					    android:layout_width="match_parent"						    
					    android:layout_height="wrap_content"
					    android:inputType="textPassword"
					    android:enabled="false"
					    android:layout_marginRight="50dp">      					    
					</EditText>					
					
			</LinearLayout>		
			
			<LinearLayout				    
			    android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:orientation="horizontal"					
				android:layout_gravity="center_vertical">    
				
					<TextView
						android:id="@+id/settingsView_LabelRepeatNewPassword"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_marginLeft="50dp"
					    android:text="@string/settingsView_LabelRepeatNewPassword">					    
					</TextView>    
				 
					<EditText
					    android:id="@+id/settingsView_EditRepeatNewPassword"
					    android:layout_width="match_parent"						    
					    android:layout_height="wrap_content"
					    android:inputType="textPassword"
					    android:enabled="false"
					    android:layout_marginRight="50dp">      						    
					</EditText>
									
			</LinearLayout>			 
		
		
			<!-- Separator 2-->		      				      	
			<RelativeLayout
				android:layout_width="fill_parent"
				android:layout_height="2dp"
				android:background="#000000">       							  
			</RelativeLayout>
		     
					
			<LinearLayout 		    
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">  
		    
				<Button
			        android:id="@+id/settingsView_ButtonSaveAndBack"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/settingsView_ButtonSaveAndBack"			        
			        android:onClick="savePreferences"			        
			        android:layout_weight="2">
			    </Button>    			    
			    
			    <Button
			        android:id="@+id/settingsView_ButtonBack"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/settingsView_ButtonBack"
			        android:onClick="cancelPreferences"
			        android:layout_weight="2">
				</Button>
								    
			</LinearLayout>
						    
    	</LinearLayout>	
	</ScrollView>   
	
</LinearLayout>