<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Action Bar -->

    <com.markupartist.android.widget.ActionBar
	    android:id="@+id/actionbar"
	    style="@style/ActionBar" />
    
    <View
       android:layout_width="fill_parent"
       android:layout_height="3dp"
       android:background="#BDC3C7" />
    
	<!-- Month Viewfinder -->
	
	<RelativeLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="5dp"
	    android:background="#FFFFFF" >
	   
	   <!-- Button Previous -->
	   
	   <LinearLayout 
   			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="left">
		    
		    <Button
		    	android:id="@+id/calendarView_Button_Previous"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/calendarView_Button_Previous" />
		    
		</LinearLayout>

	   	<!-- Month Text -->
	   	
	    <TextView
	        android:id="@+id/calendarView_Label_Month"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_centerHorizontal="true"
	        android:layout_toRightOf="@id/calendarView_Button_Previous"
			android:text="@string/calendarView_Month_Text"
			android:gravity="center_horizontal"
	        android:textColor="#2C3E50"
	        android:textSize="22sp"
	        android:textStyle="bold" />
	    
	   	<!-- Button Next -->
	    
	    <LinearLayout 
   			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:layout_toRightOf="@+id/calendarView_Label_Month" >
		    
		    <Button
		    	android:id="@+id/calendarView_Button_Next"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/calendarView_Button_Next"
		    	android:gravity="center" />
		    
	    </LinearLayout>
	    
	</RelativeLayout>
	
	<!-- Este Host sirve para ocultar de una sola vez el GridView y las etiqueetas de los dias -->
	<LinearLayout 
	    android:id="@+id/calendarView_HostLayout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    
	<!-- ETIQUETAS DIAS: LUNES, MARTES, ... -->
	<!-- ********************************************* -->
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="10dp"
	    android:orientation="horizontal">
	    
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"	        
	        style="@style/formLabel" 
	        android:text="@string/calendarView_Label_Monday" />
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        style="@style/formLabel" 
	        android:text="@string/calendarView_Label_Tuesday" />
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        style="@style/formLabel" 
	        android:text="@string/calendarView_Label_Wednesday" />
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"	        
	        style="@style/formLabel" 
	        android:text="@string/calendarView_Label_Thursday" />	   
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"	        
	        style="@style/formLabel" 
	        android:text="@string/calendarView_Label_Friday" />	    
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"	        
	        style="@style/formLabel" 
	        android:text="@string/calendarView_Label_Saturday" />	  
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"	        
	        style="@style/formLabel" 
	        android:text="@string/calendarView_Label_Sunday" />	  	          	        	      	    	  "
	</LinearLayout>
	
	<View
       android:layout_width="fill_parent"
       android:layout_height="3dp"
       android:layout_marginTop="2dp"
       android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"
       android:layout_marginBottom="3dp"
	   android:background="@drawable/biljet_gradient" />
	
	<GridView
	    android:id="@+id/calendarView_gridCalendar"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_marginLeft="5dp"
	    android:numColumns="7" 
	   	android:background="#FFFFFF"
	   	android:stretchMode="columnWidth"
	   	android:verticalSpacing="2dp"
	   	android:horizontalSpacing="2dp">
	</GridView>
	
		</LinearLayout>
</LinearLayout>